-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.14.0-beta1
-
None
-
dc66d30076495f84a7173797aafe7832b449da11 (qt-creator/qt-creator/master)
Functions can befound in the locator with "." or "m".
But when you add a C++ attribute to a function parameter the function can't be found with "m" and every attribute adds an entry for the function when searching with ".".
e.g. this function is found 3 times with ".":
int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) { }
Tested with master: 8d760eff8f5fd3f3b2c545706d55bba0ac16b729
- relates to
-
QTCREATORBUG-24650 Using function attributes in namespaces breaks the highlighting and the symbol navigator
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24636 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
321213,4 | clangbackend: Another workaround for missing libclang cursor information | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
321452,2 | CPlusPlus: Support C++11 attributes also for function parameters | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |